--- a/index.html
+++ b/index.html
@@ -5,8 +5,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Word Game</title>
+    <link rel="stylesheet" href="./css/main.css">
+
+
+
+
+
 </head>
 <body>
     
+
+    <div class=container>
+
+
+        <div class="gamedetail"></div>
+
+        <div class="gameimg"></div>
+
+
+        <div class="gameword">
+
+            <div class="gamewordcharacter"></div>
+            <div class="gamewordcharacter"></div>
+            <div class="gamewordcharacter"></div>
+            <div class="gamewordcharacter"></div>
+            <div class="gamewordcharacter"></div>
+            <div class="gamewordcharacter"></div>
+
+        </div>
+
+
+        
+    </div>
+
+
+
 </body>
 </html>
