--- a/index.html
+++ b/index.html
@@ -34,10 +34,12 @@
 
     <div class=container>
 
-        hello
         <div class="gamedetail"></div>
 
-        <div class="gameimg"></div>
+        <div class="gamecontent gameimg"></div>
+        <div class="gamecontent gametext"></div>
+        <div class="gamecontent gamevoice"></div>
+
 
 
         <div class="gameword">
