--- a/index.html
+++ b/index.html
@@ -34,7 +34,11 @@
 
     <div class=container>
 
-        <div class="gamedetail"></div>
+        <div class="gamedetail">
+
+            <div id=score>100</div>
+
+        </div>
 
         <div class="gamecontent gameimg"></div>
         <div class="gamecontent gametext"></div>
@@ -42,12 +46,23 @@
 
 
 
-        <div class="gameword">
+        <div class="gamewordcontainer">
+
+            <div id="gamepointgain">
+
+                
+            </div>
+
+
+            <div class="gameword">
+
+
+  
 
 
 
-
-
+            </div>
+    
 
         </div>
 
