--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 
 
-    <script type=module src="./js/app.js" defer></script>
+    <script type=module src="./js/app.js?v=1" defer></script>
 
 
 
@@ -36,7 +36,7 @@
 
         <div class="gamedetail">
 
-            <div id=score>100</div>
+            <div id=score>0</div>
 
         </div>
 
@@ -47,6 +47,8 @@
 
 
         <div class="gamewordcontainer">
+
+
 
             <div id="gamepointgain">
 
@@ -62,6 +64,9 @@
 
 
             </div>
+
+
+            
     
 
         </div>
