--- a/index.html
+++ b/index.html
@@ -41,8 +41,20 @@
         </div>
 
         <div class="gamecontent gameimg"></div>
-        <div class="gamecontent gametext"></div>
-        <div class="gamecontent gamevoice"></div>
+
+        <div class="gamecontent gametext">
+            <div class="gametextquestion"></div>
+        </div>
+
+        <div class="gamecontent gamevoice">
+
+            <div class="gamevoicecontainer">
+
+                <img class="voicebtn" src="./assets/voiceplay_lightgray.svg">
+
+            </div>
+
+        </div>
 
 
 
