--- a/question.html
+++ b/question.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Word Game</title>
-    <link rel="stylesheet" href="./css/main.css">
+    <title>Word Gamessss</title>
+    <link rel="stylesheet" href="../../css/main.css">
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/jqueryui@1.11.1/jquery-ui.min.js"></script>
@@ -21,7 +21,7 @@
 
 
 
-    <script type=module src="./js/app.js?v=1" defer></script>
+    <script type=module src="../../js/app.js?v=1" defer></script>
 
 
 
