voice with click play

--- a/question.html
+++ b/question.html
@@ -50,7 +50,7 @@
 
             <div class="gamevoicecontainer">
 
-                <img class="voicebtn" src="./assets/voiceplay_lightgray.svg">
+                <img class="voicebtn" src="../../assets/voiceplay_lightgray.svg">
 
             </div>
 
